differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr71514.c-5.4.0-1.out.txt
pr71514.c: In function ‘fn1’:
pr71514.c:15:3: error: size mismatch in argument 2 of ‘__atomic_exchange’
   __atomic_exchange (&a, &foo, &b, __ATOMIC_RELAXED);  
   ^
pr71514.c:22: confused by earlier errors, bailing out
